# DocuMentor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
db/: embedding_function.py
docs/: document.py  manager.py  pdf.py
llm/: manager.py  prompts.py
src/documentor/: __init__.py  utils.py
src/documentor/chat/: __init__.py  chat.py  chat_history.py  chat_manager.py  chat_system.py  data_models.py
src/documentor/db/: __init__.py  embedding_function.py  manager.py
src/documentor/docs/: __init__.py  data.py  document.py  manager.py  pdf.py  pdf_doc.py  text_doc.py  text_splitter.py
src/documentor/llm/: __init__.py  groq_model.py  manager.py  prompts.py  retriever.py
src/documentor/tests/: __init__.py  chat_history_test.py  chat_system_test.py  docman_test.py  document_test.py  groq_model_test.py  llm_manager_test.py  pdf_doc_test.py  retriever_test.py  text_doc_test.py  utils.py  vectordb_man_test.py
src/documentor/tests/data/: attention-is-all-you-need-paper.txt
src/documentor/ui/: __init__.py  chat_manager.py  main_window.py
src/documentor/ui/widgets/: __init__.py  ai_message_widget.py  base_widget.py  history_widget.py  message_box_widget.py  user_message_box_widget.py  user_message_widget.py
src/documentor_ai/: __backends_old.py  _types.py  backends.py  chat_model.py  messages.py
src/documentor_ui/resources/styles/: dark-style.css
src/documentor_ui/resources/ui_files/: ai-message-widget-ui.ui  main_window_ui.ui  message-box-ui.ui  user-message-widget-ui.ui  user_message_box.ui
tests/: document_test.py
(+4 files in other folders)
