[project]
name = "documentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.6",
    "dotenv>=0.9.9",
    "langchain>=0.3.24",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pypdf>=5.4.0",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
]
