[project]
name = "documentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MahirHamiAbrar", email = "mhabrarmts@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.6",
    "dotenv>=0.9.9",
    "groq>=0.23.1",
    "langchain>=0.3.24",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "numpy>=2.2.5",
    "openai>=1.77.0",
    "pypdf>=5.4.0",
    "pyqt6>=6.9.0",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
]

[project.scripts]
documentor = "documentor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
